--- a/WindowsShade/Properties/Resources.resx
+++ b/WindowsShade/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="bright2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\bright2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="monitor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\monitor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
