--- a/WindowsShade/FormMain.resx
+++ b/WindowsShade/FormMain.resx
@@ -1371,81 +1371,109 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACU
-        EAAAAk1TRnQBSQFMAwEBAAE4AQABOAEAAWQBAAFkAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
-        AZABAQIAAWQDAAEBAQABCAUAAUABnBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
-        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
-        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
-        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
-        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
-        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
-        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
-        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
-        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
-        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
-        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
-        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
-        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
-        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
-        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
-        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
-        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
-        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
-        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
-        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
-        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
-        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
-        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
-        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
-        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
-        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
-        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
-        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/AQBk//8ALQAj/wHz
-        AbwE9wHsAm0B6gISAxMBEgHqAW0B6wLsAZIB9wHvAQcB8yf//wAtAB3/AfAB9wHsAeoBFAFDAQ8BDgIP
-        Ag4BAAEOCQ8CDgQAAQ8BEAEPAREBFAFtAewB9wHwIf//AC0AHP8BFAEAAQ4BFQRtAeoCEgHqAW0BFAEP
-        AgABEAEPBBACAAEOARQC6gESARMBEgHqA20BQwIAAUMg//8ALQAb/wH0Ae0BvAHyC/8B8gG8AQcBAAQO
-        AQABBwG8AfIL/wHyAQcB7AHzH///AC0AHP8B9BD/AQAFDgG8D/8B9CD//wAtAB3/BPQM/wEABQ4BBwv/
-        A/QB8yH//wAtAB//AfQC8gHzAfQJ/wUOAQAJ/wH0AfMC8gH0I///AC0AIv8B9AH/AvQE/wH0AfABBwHr
-        BA4BEwEHAfAB8wT/AvQB/wH0Jv//AC0AKv8BvAHrAUMBAAQOAQABEQFtAQcu//8ALQAr/wEAAw4CDwMO
-        AQAB8S7//wAtACv/ARQBQwEOAQ8BDgIPAQABDwEAL///AC0AK/8B8QFDAg4BFQEUAQ4BbQERAe0v//8A
-        LQAs/wEOAQABkgEVAUMBAAHtAQ4w//8ALQAs/wERAQAB/wEOAUMBDgEAAQ4w//8ALQAs/wFtAREB9wEO
-        AUMCDgEVMP//AC0ALP8BBwERAQ8BEQFDAg4BbTD//wAtAAP/AfcYbQHqAxIMEwEUBg4BEQ0TAhIB6gFt
-        AeoEbQHqFG0B6gH3A///AC0AA/8BESNDBREBQwYVAUMGEQFDAREkQwEQA///AC0AA/8BFVwUAUMD//8A
-        LQAD/wIVG9UBtBjVAeYj1QG0AdUBFQFDA///AC0AA/8CFVrVARUBQwP//wAtAAP/AhVa1QEVAUMD//8A
-        LQAD/wIVWtUBFQFDA///AC0AA/8CFVrVARUBQwP//wAtAAP/AhVa1QEVAUMD//8ALQAD/wIVWtUBFQFD
-        A///AC0AA/8BFQEUWtUBFQFDA///AC0AA/8CFVrVARUBQwP//wAtAAP/AhVa1QEVAUMD//8ALQAD/wEV
-        ARRa1QEVARED//8ALQAD/wEVARRa1QEVAUMD//8ALQAD/wEVARRa1QEVAUMD//8ALQAD/wEVARRa1QEU
-        AUMD//8ALQAD/wEVARRa1QEUAUMD//8ALQAD/wEVARRa1QEUAUMD//8ALQAD/wEVARRa1QEUAUMD//8A
-        LQAD/wEVARRa1QEUAUMD//8ALQAD/wEVARRa1QEUAUMD//8ALQAD/wEVARRa1QEUAUMD//8ALQAD/wEV
-        ARRa1QEUAUMD//8ALQAD/wIUWtUBFAFDA///AC0AA/8CFFrVARQBQwP//wAtAAP/AhRa1QEUARUD//8A
-        LQAD/wEVARRa1QEUARUD//8ALQAD/wIUWtUBFAEVA///AC0AA/8CFFrVARQBFQP//wAtAAP/AhRa1QEU
-        ARUD//8ALQAD/wIUWtUBFAEVA///AC0AA/8CFFrVARQBFQP//wAtAAP/AhRa1QEUARUD//8ALQAD/wIU
-        WtUBFAEVA///AC0AA/8CFFrVARQBFQP//wAtAAP/AhRa1QEUARUD//8ALQAD/wIUWtUBFAEVA///AC0A
-        A/8CFFrVARQBFQP//wAtAAP/AhRa1QEUARUD//8ALQAD/wIUWtUBFAEVA///AC0AA/8CFFrVAhQD//8A
-        LQAD/wIUGdUM5jXVAhQD//8ALQAD/wETARQO1QLmHc4C5ivVAhQD//8ALQAD/wETARQJ1QPmBc4C5gHO
-        AeYCzgLmAc4F5gTOCOYHzgTmJNUCFAP//wAtAAP/AhQF1QHmKs4C5gjOAeYf1QIUA///AC0AA/8BEwEU
-        A+YtzgLmBs4B5gTOAuYb1QIUA///AC0AA/8BEwERA+YCzgLmK84B5gjOAuYFzgLmFtUCFAP//wAtAAP/
-        ARMBEQHOA+YuzgHmCs4B5gfOAuYT1QIUA///AC0AA/8BEwERM84E5gXOAuYGzgHmBM4B5hDVAhQD//8A
-        LQAD/wETARECzgHmA84B5irOAeYNzgPmAc4B5gLOAeYFzgHmDdUCFAP//wAtAAP/ARMBEQLmRc4E5gPO
-        AuYK1QETARQD//8ALQAD/wETARFLzgHmAc4B5gTOCNUBFAETA///AC0AA/8BEwERAs4B5krOBOYDzgHm
-        BdUCFAP//wAtAAP/ARMBEUvOAuYFzgLmA84D1QIUA///AC0AA/8BEwERTs4B5gHOAuYEzgHmAs4B5gIT
-        A///AC0AA/8BEgFDT84C5gPOAeYFzgERARMD//8ALQAD/wESAUNUzgPmA84BEQETA///AC0AA/8BEgFD
-        U84E5gPOAREBEwP//wAtAAP/ARIBEVHOBeYEzgERARMD//8ALQAD/wHqARFLzgTmAs4F5gTOAREBEwP/
-        /wAtAAP/AeoBEUXOAuYBzgrmAc4B5gbOAREBEwP//wAtAAP/AW0BEUbOAeYBzgnmCc4BEQETA///AC0A
-        A/8BbQERR84K5gnOAREBEgP//wAtAAP/AW0BEEbOAuYBzgHmA84B5gzOAREBEgP//wAtAAP/AesBEEPO
-        BeYBzgHmAc4B5g7OAREBEgP//wAtAAP/AesBEEPOBeYBzgLmD84BEQESA///AC0AA/8B7AEQM84C5gjO
-        A+YBzgTmAc4C5hLOAREBEgP//wAtAAP/AewBEDPOAeYJzgjmFc4BEQESA///AC0AA/8B7AEQPc4E5gHO
-        BOYUzgERARID//8ALQAD/wHsARACzgHmM84B5gLOAeYCzgXmAc4D5hXOAREBEgP//wAtAAP/AewBDwHO
-        AeY0zgPmAc4G5gHOAeYYzgERARID//8ALQAD/wHsAQ8BzgHmKc4E5gTOBuYBzgbmGs4BEQESA///AC0A
-        A/8B7AEPAc4B5iHOAeYEzgLmAs4B5gLOBuYBzgHmAc4B5iHOAREBEgP//wAtAAP/AewBDwHOAeYizgLm
-        As4C5gLOAeYCzgXmAs4B5iPOAREB6gP//wAtAAP/AewBDwHOAeYWzgzmAs4B5gPOAeYBzgLmK84BrQER
-        AeoD//8ALQAD/wHsAQ8BzhjmAc4E5gHOAuY4zgGtAREB6gP//wAtAAP/AewBDwHOGOYBzgTmAc4C5jnO
-        AREB6gP//wAtAAP/Ae0BEFqGAUMB6gP//wAtAAP/Ae0BEFoRARUBEgP//wAtAAP/AewBAFsOAesD//8A
-        LQAD/wHzW/ABvAH0A///AC0AZP//AC0AAUIBTQE+BwABPgMAASgDAAGQAQECAAFkAwABAQEAAQEFAAFQ
-        ARQWAAP//wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AGUACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABC
+        FgAAAk1TRnQBSQFMAgEBAgEAAVABAAFQAQABZAEAAWQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABkAEBAgABZAMAAQEBAAEIBQABQAGcGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHA
+        AdwBwAEAAfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANC
+        AQADOQEAAYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/
+        ATMDAAFmAwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJm
+        AgABZgGZAgABZgHMAgABZgH/AgABmQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEz
+        AgABzAFmAgABzAGZAgACzAIAAcwB/wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEA
+        AWYBAAEzAQABmQEAATMBAAHMAQABMwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/
+        AQABMwFmAgABMwFmATMBAAEzAmYBAAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEA
+        ATMBmQFmAQABMwKZAQABMwGZAcwBAAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEA
+        ATMCzAEAATMBzAH/AQABMwH/ATMBAAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEA
+        ATMBAAFmAQABZgEAAWYBAAGZAQABZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEz
+        AZkBAAFmATMBzAEAAWYBMwH/AQACZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEA
+        AWYBmQFmAQABZgKZAQABZgGZAcwBAAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFm
+        AcwB/wEAAWYB/wIAAWYB/wEzAQABZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEz
+        AZkBAAGZAQABmQEAAZkBAAHMAQABmQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIA
+        AZkBZgEzAQABmQEzAWYBAAGZAWYBmQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHM
+        AQACmQH/AQABmQHMAgABmQHMATMBAAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZ
+        Af8BMwEAAZkBzAFmAQABmQH/AZkBAAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEA
+        AZkBAAHMAQABzAEAAZkBMwIAAcwCMwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFm
+        AgABzAFmATMBAAGZAmYBAAHMAWYBmQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFm
+        AQABzAKZAQABzAGZAcwBAAHMAZkB/wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/
+        AgABzAH/ATMBAAGZAf8BZgEAAcwB/wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEA
+        AZkBAAHMATMCAAH/AjMBAAH/ATMBZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEz
+        AQABzAJmAQAB/wFmAZkBAAH/AWYBzAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEA
+        Af8BmQHMAQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEA
+        Av8BMwEAAcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEA
+        Av8BZgEAASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4
+        AQAB8AH7Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8BAMj/yAAj/wHz
+        AbwE9wHsAm0B6gISAxMBEgHqAW0B6wLsAZIB9wHvAQcB80r/AfIBBwHvAvcBkgHsAm0B6gISAhMBEgLq
+        AW0B6wLsAZIC7wEHAfMn/8gAHf8B8AH3AewB6gEUAUMBDwEOAg8CDgEAAQ4JDwIOBAABDwEQAQ8BEQEU
+        AW0B7AH3AfA+/wHwAe8B7AFtARQBEQEPAQ4CDwQOAw8CEAUPAg4DAAEPARABDwERARQBbQHsAfcB8CH/
+        yAAc/wEUAQABDgEVBG0B6gISAeoBbQEUAQ8CAAEQAQ8EEAIAAQ4BFALqARIBEwESAeoDbQFDAgABQzz/
+        ARQBAAEOARUEbQHqARIC6gFtARQBDwIABhABAAIOARQBbQHqARIBEwESAeoDbQERAgABQyD/yAAb/wH0
+        Ae0BvAHyC/8B8gG8AQcBAAQOAQABBwG8AfIL/wHyAQcB7AHzOv8B9AHtAbwB8gv/AfIBvAEHAQAEDgEA
+        AQcBvAHyC/8B8gEHAewB8x//yAAc/wH0EP8BAAUOAbwP/wH0PP8B9BD/AQABDwEOAg8BDgG8D/8B9CD/
+        yAAd/wT0DP8BAAUOAQcL/wP0AfM+/wT0DP8BAAUOAQcL/wP0AfMh/8gAH/8B9ALyAfMB9An/BQ4BAAn/
+        AfQB8wLyAfRC/wH0AvIB8wH0Cf8FDgEACf8B9AHzAvIB9CP/yAAi/wH0Af8C9AT/AfQB8AEHAesEDgET
+        AQcB8AHzBP8C9AH/AfRI/wH0Af8C9AT/AfMB8QEHAesEDgETAQcB8QHzBP8C9AH/AfQm/8gAKv8BvAHr
+        AUMBAAQOAQABEQFtAQdY/wG8AesBQwEABA4BAAERAW0BBy7/yAAr/wEAAw4CDwMOAQAB8Vn/AQADDgIP
+        Aw4BAAHxLv/IACv/ARQBQwEOAQ8BDgIPAQABDwEAWv8BFAFDAQ4BDwEOAg8BAAEPAQAv/8gAK/8B8QFD
+        Ag4BFQEUAQ4BbQERAe1a/wHxAUMCDgEVARQBDgFtAREB7S//yAAs/wEOAQABkgEVAUMBAAHtAQ5c/wEO
+        AQABkgEVAUMBAAHtAQ4w/8gALP8BEQEAAf8BDgFDAQ4BAAEOXP8BEQEAAf8BDgFDAQ4BAAEOMP/IACz/
+        AW0BEQH3AQ4BQwIOARVc/wFtAREB9wEOAUMCDgEVMP/IACz/AQcBEQEPAREBQwIOAW1c/wEHAREBDwER
+        AUMCDgFtMP/IAAP/AfcYbQHqAxIMEwEUBg4BEQ0TAhIB6gFtAeoEbQHqFG0B6gH3Bv8B9xdtAuoDEgwT
+        ARQGDgERDRMCEgHqAW0B6gRtAeoUbQHqAfcD/8gAA/8BESNDBREBQwYVAUMGEQFDAREkQwEQBv8BERxD
+        DBEBQwYVAUMMESBDARAD/8gAA/8BFVwUAUMG/wEVXBQBQwP/yAAD/wIVG9UBtBjVAeYj1QG0AdUBFQFD
+        Bv8CFRv3AZI+9wJDA//IAAP/AhVa1QEVAUMG/wEVAUNa7wEVAUMD/8gAA/8CFVrVARUBQwb/ARUBQ1rv
+        AkMD/8gAA/8CFVrVARUBQwb/ARUBQ1rvARUBQwP/yAAD/wIVWtUBFQFDBv8BFQFDWu8BFQFDA//IAAP/
+        AhVa1QEVAUMG/wEVAUNa7wEVAUMD/8gAA/8CFVrVARUBQwb/ARUBQ1rvARUBQwP/yAAD/wEVARRa1QEV
+        AUMG/wIVWu8BFQFDA//IAAP/AhVa1QEVAUMG/wIVWu8BFQFDA//IAAP/AhVa1QEVAUMG/wIVWu8BFQFD
+        A//IAAP/ARUBFFrVARUBEQb/AhVa7wEVARED/8gAA/8BFQEUWtUBFQFDBv8CFVrvARUBQwP/yAAD/wEV
+        ARRa1QEVAUMG/wIVWu8BFQFDA//IAAP/ARUBFFrVARQBQwb/AhVa7wEVAUMD/8gAA/8BFQEUWtUBFAFD
+        Bv8CFVrvARUBQwP/yAAD/wEVARRa1QEUAUMG/wIVWu8BFQFDA//IAAP/ARUBFFrVARQBQwb/AhVa7wEV
+        AUMD/8gAA/8BFQEUWtUBFAFDBv8CFVrvARUBQwP/yAAD/wEVARRa1QEUAUMG/wIVWu8BFAFDA//IAAP/
+        ARUBFFrVARQBQwb/AhVa7wEVAUMD/8gAA/8BFQEUWtUBFAFDBv8CFVrvARUBQwP/yAAD/wIUWtUBFAFD
+        Bv8BFAEVWu8BFQFDA//IAAP/AhRa1QEUAUMG/wEUARVa7wEVAUMD/8gAA/8CFFrVARQBFQb/ARQBFVrv
+        AhUD/8gAA/8BFQEUWtUBFAEVBv8CFVrvAhUD/8gAA/8CFFrVARQBFQb/ARQBFVrvAhUD/8gAA/8CFFrV
+        ARQBFQb/ARQBFVrvAhUD/8gAA/8CFFrVARQBFQb/AhRa7wIVA//IAAP/AhRa1QEUARUG/wIUWu8CFQP/
+        yAAD/wIUWtUBFAEVBv8BFAEVWu8CFQP/yAAD/wIUWtUBFAEVBv8BFAEVWu8CFQP/yAAD/wIUWtUBFAEV
+        Bv8BFAEVWu8CFQP/yAAD/wIUWtUBFAEVBv8BFAEVWu8CFQP/yAAD/wIUWtUBFAEVBv8BFAEVWu8CFQP/
+        yAAD/wIUWtUBFAEVBv8BFAEVWu8BFAEVA//IAAP/AhRa1QEUARUG/wIUWu8BFAEVA//IAAP/AhRa1QEU
+        ARUG/wIUWu8BFAEVA//IAAP/AhRa1QEUARUG/wIUWu8BFAEVA//IAAP/AhRa1QIUBv8CFFrvAhQD/8gA
+        A/8CFBnVDOY11QIUBv8BEwEUH+8C9znvAhQD/8gAA/8BEwEUDtUC5h3OAuYr1QIUBv8BEwEUEO8e9yzv
+        AhQD/8gAA/8BEwEUCdUD5gXOAuYBzgHmAs4C5gHOBeYEzgjmB84E5iTVAhQG/wETARQJ7xL3Ae8P9wHv
+        B/cB7wH3Je8CFAP/yAAD/wIUBdUB5irOAuYIzgHmH9UCFAb/AhQF7zX3IO8CFAP/yAAD/wETARQD5i3O
+        AuYGzgHmBM4C5hvVAhQG/wETARQ+9xzvAhQD/8gAA/8BEwERA+YCzgLmK84B5gjOAuYFzgLmFtUCFAb/
+        ARMBEEP3F+8CFAP/yAAD/wETAREBzgPmLs4B5grOAeYHzgLmE9UCFAb/ARMBEEf3E+8CFAP/yAAD/wET
+        AREzzgTmBc4C5gbOAeYEzgHmENUCFAb/ARMBED/3Ae8B9wHvCPcQ7wIUA//IAAP/ARMBEQLOAeYDzgHm
+        Ks4B5g3OA+YBzgHmAs4B5gXOAeYN1QIUBv8BEwERAZI+9wHvB/cB7wT3Du8CFAP/yAAD/wETAREC5kXO
+        BOYDzgLmCtUBEwEUBv8BEwERAZJO9wvvAhQD/8gAA/8BEwERS84B5gHOAeYEzgjVARQBEwb/ARMBEFL3
+        CO8BFAETA//IAAP/ARMBEQLOAeZKzgTmA84B5gXVAhQG/wETARBU9wbvAhQD/8gAA/8BEwERS84C5gXO
+        AuYDzgPVAhQG/wETARBX9wPvAhQD/8gAA/8BEwERTs4B5gHOAuYEzgHmAs4B5gITBv8BEwERAZJZ9wEU
+        ARMD/8gAA/8BEgFDT84C5gPOAeYFzgERARMG/wESAREBklP3Ae8E9wGSAREBEwP/yAAD/wESAUNUzgPm
+        A84BEQETBv8BEgERAZJY9wGSAREBEwP/yAAD/wESAUNTzgTmA84BEQETBv8BEgERAZJS9wHvAfcB7wT3
+        AREBEwP/yAAD/wESARFRzgXmBM4BEQETBv8BEgERAZJT9wHvBPcBkgERARMD/8gAA/8B6gERS84E5gLO
+        BeYEzgERARMG/wHqAREBklH3Ae8G9wGSAREBEwP/yAAD/wHqARFFzgLmAc4K5gHOAeYGzgERARMG/wHq
+        AREBkkj3Ae8E9wLvCfcBkgERARMD/8gAA/8BbQERRs4B5gHOCeYJzgERARMG/wFtAREBkkn3Ae8C9wHv
+        C/cBkgERARMD/8gAA/8BbQERR84K5gnOAREBEgb/AW0BEAGSSPcC7wL3Ae8L9wGSAREBEgP/yAAD/wFt
+        ARBGzgLmAc4B5gPOAeYMzgERARIG/wFtARABkkz3Ae8L9wGSAREBEgP/yAAD/wHrARBDzgXmAc4B5gHO
+        AeYOzgERARIG/wHrARBJ9wHvAfcB7w33AZIBEQESA//IAAP/AesBEEPOBeYBzgLmD84BEQESBv8B6wEP
+        AZJI9wHvD/cBkgEQARID/8gAA/8B7AEQM84C5gjOA+YBzgTmAc4C5hLOAREBEgb/AewBDwGSRfcB7xL3
+        AZIBEAESA//IAAP/AewBEDPOAeYJzgjmFc4BEQESBv8B7AEPAZJD9wHvFPcBkgEQARID/8gAA/8B7AEQ
+        Pc4E5gHOBOYUzgERARIG/wHsAQ8Bklj3AZIBEAESA//IAAP/AewBEALOAeYzzgHmAs4B5gLOBeYBzgPm
+        Fc4BEQESBv8B7AEPAZI49wHvH/cBkgEQARID/8gAA/8B7AEPAc4B5jTOA+YBzgbmAc4B5hjOAREBEgb/
+        AewBDwGSNvcB7wL3Ae8e9wGSARABEgP/yAAD/wHsAQ8BzgHmKc4E5gTOBuYBzgbmGs4BEQESBv8B7AEP
+        AZI39wHvAfcB7wT3Ae8Z9wGSARABEgP/yAAD/wHsAQ8BzgHmIc4B5gTOAuYCzgHmAs4G5gHOAeYBzgHm
+        Ic4BEQESBv8B7AEPAZJY9wGSARABEgP/yAAD/wHsAQ8BzgHmIs4C5gLOAuYCzgHmAs4F5gLOAeYjzgER
+        AeoG/wHsAQ8Bkif3Au8C9wHvAvcF7wL3Ae8i9wGSARAB6gP/yAAD/wHsAQ8BzgHmFs4M5gLOAeYDzgHm
+        Ac4C5ivOAa0BEQHqBv8B7AEPAZIB7xn3Ae8G9wHvCvcB7yv3AZIBEQHqA//IAAP/AewBDwHOGOYBzgTm
+        Ac4C5jjOAa0BEQHqBv8B7AEPAZIB7xb3Ae8D9wLvAvcB7zj3Ae0BEQHqA//IAAP/AewBDwHOGOYBzgTm
+        Ac4C5jnOAREB6gb/AewBDwH3Fu8B9wHvAfcE7wH3Au849wGSAREB6gP/yAAD/wHtARBahgFDAeoG/wHt
+        ARAB6ldtAeoBbQERAeoD/8gAA/8B7QEQWhEBFQESBv8B7QIQWREBQwESA//IAAP/AewBAFsOAesG/wHs
+        AQBbDgHrA//IAAP/AfNb8AG8AfQG/wHzW/ABvAH0A//IAMj/yAABQgFNAT4HAAE+AwABKAMAAZABAQIA
+        AWQDAAEBAQABAQUAAVABFBYAA///AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
+        ZQAL
 </value>
   </data>
   <metadata name="plScreenSettings.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtResolution.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="lblMonitorInfo.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1455,9 +1483,6 @@
     <value>True</value>
   </metadata>
   <metadata name="ckxIsMainScreen.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="cbxResolution.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="label1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
