--- a/WindowsShade/Properties/Resources.resx
+++ b/WindowsShade/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="monitor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\monitor.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="monitor_gray" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\monitor_gray.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
